# WaterLily

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: macros.hpp  main.cpp  pch.hpp
Source/Engine/: Engine.cpp  Engine.hpp  EngineConfig.hpp  EventSystem.hpp  Events.hpp  InputHelpers.hpp  InputUtils.hpp  Window.hpp
Source/Engine/Components/: CameraComponent.hpp
Source/Engine/Components/Private/: CameraComponent.cpp
Source/Engine/FileSystem/: FilePath.hpp  FileSystem.hpp
Source/Engine/FileSystem/Private/: FilePath.cpp  FileSystem.cpp
Source/Engine/Private/: Engine.cpp  EventSystem.cpp  Window.cpp
Source/Engine/Render/: ComputeRenderer.hpp  ForwardRenderer.hpp  Frame.hpp  RenderContext.hpp  RenderOptions.hpp  RenderOptionsTypes.hpp  Renderer.hpp  SceneRenderer.hpp
Source/Engine/Render/Private/: ComputeRenderer.cpp  ForwardRenderer.cpp  RenderOptions.cpp  SceneRenderer.cpp
Source/Engine/Render/RenderStages/: DebugStage.hpp  ForwardStage.hpp  PrimitiveCullStage.hpp  RenderStage.hpp
Source/Engine/Render/RenderStages/Private/: DebugStage.cpp  ForwardStage.cpp  PrimitiveCullStage.cpp  RenderStage.cpp
Source/Engine/Render/Resources/: Buffer.hpp  Descriptor.hpp  DescriptorAllocator.hpp  DescriptorLayoutCache.hpp  DescriptorManager.hpp  Image.hpp  ImageView.hpp  MemoryManager.hpp  ResourceHelpers.hpp  StbImage.hpp
Source/Engine/Render/Resources/DescriptorSets/: DescriptorSetBuilder.hpp  DescriptorSetLayout.hpp  DescriptorSetLayoutBuilder.hpp  DescriptorSetLayoutCache.hpp  DescriptorSetManager.hpp  DescriptorSetPool.hpp
Source/Engine/Render/Resources/DescriptorSets/Private/: DescriptorSetAllocator.cpp  DescriptorSetBuilder.cpp  DescriptorSetLayout.cpp  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutCache.cpp  DescriptorSetManager.cpp  DescriptorSetPool.cpp
Source/Engine/Render/Resources/Pipelines/: ComputePipelineBuilder.hpp  GraphicsPipelineBuilder.hpp
Source/Engine/Render/Resources/Pipelines/Private/: ComputePipelineBuilder.cpp  GraphicsPipelineBuilder.cpp
Source/Engine/Render/Resources/Private/: Buffer.cpp  CommandBufferSync.cpp  Descriptor.cpp  DescriptorAllocator.cpp  DescriptorLayoutCache.cpp  DescriptorManager.cpp  Image.cpp  ImageView.cpp  MemoryManager.cpp  ResourceHelpers.cpp  StbImage.cpp
Source/Engine/Render/Resources/Shaders/: ShaderCompiler.hpp  ShaderManager.hpp  ShaderModule.hpp
Source/Engine/Render/Resources/Shaders/Private/: ShaderCompiler.cpp  ShaderManager.cpp  ShaderModule.cpp
Source/Engine/Render/Shaders/: ShaderManager.hpp
Source/Engine/Render/Shaders/Private/: ShaderManager.cpp  ShaderModule.cpp
Source/Engine/Render/UI/: UIRenderer.hpp
Source/Engine/Render/UI/Private/: UIRenderer.cpp
Source/Engine/Render/Ui/: SettingsWidget.hpp  StatsWidget.hpp  UiConstants.hpp  UiRenderer.hpp  UiStrings.hpp  Widget.hpp
Source/Engine/Render/Ui/Private/: SettingsWidget.cpp  StatsWidget.cpp  UiRenderer.cpp
Source/Engine/Render/Utils/: ForwardUtils.hpp  MeshUtils.hpp
Source/Engine/Render/Utils/Private/: ForwardUtils.cpp  MeshUtils.cpp
Source/Engine/Render/Vulkan/: DeletionQueue.hpp  Device.hpp  Frame.hpp  GraphicsPipeline.hpp  Instance.hpp  Pipeline.hpp  RenderPass.hpp  StatsUtils.hpp  Surface.hpp  Swapchain.hpp  VulkanConfig.hpp  VulkanContext.hpp  VulkanHelpers.hpp  VulkanUtils.hpp
Source/Engine/Render/Vulkan/Buffer/: Buffer.hpp  BufferUtils.hpp
Source/Engine/Render/Vulkan/Buffer/Private/: Buffer.cpp  BufferUtils.cpp
Source/Engine/Render/Vulkan/DescriptorSets/: DescriptorSetBuilder.hpp  DescriptorSetLayout.hpp  DescriptorSetLayoutBuilder.hpp  DescriptorSetLayoutCache.hpp  DescriptorSetReflection.hpp
Source/Engine/Render/Vulkan/DescriptorSets/Private/: DescriptorSetAllocator.cpp  DescriptorSetBuilder.cpp  DescriptorSetLayout.cpp  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutCache.cpp  DescriptorSetPool.cpp
Source/Engine/Render/Vulkan/Image/: Image.hpp  ImageUtils.hpp  ImageView.hpp  RenderTarget.hpp  Sampler.hpp  Texture.hpp
Source/Engine/Render/Vulkan/Image/Private/: Image.cpp  ImageUtils.cpp  ImageView.cpp  RenderTarget.cpp  Sampler.cpp  Texture.cpp
Source/Engine/Render/Vulkan/Managers/: DescriptorSetManager.hpp  MemoryManager.hpp  ShaderManager.hpp
Source/Engine/Render/Vulkan/Pipelines/: ComputePipelineBuilder.hpp  GraphicsPipelineBuilder.hpp  Pipeline.hpp  PipelineUtils.hpp
Source/Engine/Render/Vulkan/Private/: DeletionQueue.cpp  Device.cpp  Frame.cpp  GraphicsPipeline.cpp  Instance.cpp  Pipeline.cpp  RenderPass.cpp  StatsUtils.cpp  Surface.cpp  Swapchain.cpp  VulkanContext.cpp  VulkanHelpers.cpp  VulkanUtils.cpp
Source/Engine/Render/Vulkan/Resources/: Buffer.hpp  BufferHelpers.hpp  BufferManager.hpp  CommandBufferSync.hpp  DeletionQueue.hpp  Image.hpp  ImageUtils.hpp  ImageView.hpp  MemoryManager.hpp  ResourceHelpers.hpp
Source/Engine/Render/Vulkan/Shaders/: ShaderCompiler.hpp  ShaderManager.hpp  ShaderModule.hpp  ShaderUtils.hpp
Source/Engine/Render/Vulkan/Synchronization/: CommandBufferSync.hpp  Synchronization.hpp  SynchronizationUtils.hpp
Source/Engine/Scene/: Scene.hpp  SceneDataStructures.hpp  SceneHelpers.hpp
Source/Engine/Scene/Private/: Scene.cpp  SceneDataStructures.cpp  SceneHelpers.cpp
Source/Engine/Systems/: CameraSystem.hpp  RenderSystem.hpp  System.hpp
Source/Engine/Systems/Private/: CameraSystem.cpp  RenderSystem.cpp
Source/Shaders/: Common.h  Config.h  Default.frag  Default.mesh  Default.task  Default.vert  Gradient.comp  Math.glsl  Meshlet.mesh  Meshlet.task  Ui.frag  Ui.vert  compile.bat  compile.sh  shader.frag  shader.vert  ui.frag  ui.vert
Source/Shaders/Culling/: DepthPyramid.comp  PrimitiveCull.comp
Source/Shaders/Debug/: BoundingSphere.frag  BoundingSphere.vert  Line.vert  SSBoundingRect.frag  SSBoundingRect.vert
Source/Utils/: Assert.hpp  CVarManager.hpp  Constants.hpp  DataStructures.hpp  Helpers.hpp  Logger.hpp  Math.hpp  RingAccumulator.hpp
Source/Utils/Private/: Helpers.cpp  Math.cpp
(+42 files in other folders)
